--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 /**************************************Landing page*/
-body, html {
-  height: 100%;
+
+body,
+html {
+    height: 100%;
 }
 
 .img1 {
-    background-image:url(../img/img1.jpg) ;
+    background-image: url(../img/img1.jpg);
     position: relative;
     opacity: 0.60;
     background-attachment: fixed;
@@ -24,6 +26,7 @@ body, html {
 .p1 {
     font-size: 35px;
     color: #263859;
+    margin-left: 4%;
 }
 
 /*********************************Nav*/
@@ -38,11 +41,13 @@ body, html {
     background-color: #fff0f0;
     transition: 0.5s;
     transition-timing-function: ease-in-out;
-    
+
 }
+
 .navbar-light .navbar-toggler:hover {
     background-color: #e8c7c9;
 }
+
 /********************************/
 
 .name-border {
@@ -51,7 +56,7 @@ body, html {
     top: 40%;
     left: 20%;
     right: 20%;
-    
+
     width: 60%;
     font-family: 'abril fatface', cursive;
     ;
@@ -182,7 +187,7 @@ div.col-6.about-me {
 /**********************************Spacing/img2*/
 
 .img2 {
-    background-image:url(../img/img2.jpg) ;
+    background-image: url(../img/img2.jpg);
     min-height: 40vh;
     min-width: 100vw;
     opacity: 0.60;
@@ -196,6 +201,7 @@ div.col-6.about-me {
 #img3 {
     min-height: 40vh;
 }
+
 /*************************************************Skills bar/Portfolio*/
 
 .skills-bar {
@@ -216,8 +222,8 @@ div.col-6.about-me {
 
 
 div.progress-bar {
-    background-color:#e7c6c8;
-    color:#314a52 ;
+    background-color: #e7c6c8;
+    color: #314a52;
     font-weight: 600;
     font-family: 'Raleway', sans-serif;
 
@@ -230,10 +236,12 @@ div.progress {
     background-color: #f5dbda;
 
 }
-.hire-key{
+
+.hire-key {
     margin-top: 60px;
 }
-.hire-me{
+
+.hire-me {
     margin: 50px 20px 30px;
 }
 
@@ -252,26 +260,27 @@ div.progress {
 a.btn.btn-info {
     background-color: #e7c6c8;
     border-color: #e7c6c8;
-    color: #314a52 ;
+    color: #314a52;
     font-weight: 500;
     border-radius: 50%;
     width: 80px;
     height: 80px;
     display: inline-block;
-    margin:0 0 5% 40%;
+    margin: 0 0 5% 40%;
     font-family: 'Raleway', sans-serif;
-    transition: .5s;
-   
+    transition: .5s ease-in-out;
+
 }
- 
+
 a.btn.btn-info:hover {
     background-color: #f5dbda;
-    border-color: #f5dbda; 
+    border-color: #f5dbda;
 }
 
 .p-button {
-   margin: 30% 5% 0 0;
+    margin: 30% 5% 0 0;
 }
+
 /***********************************************Form/Social section*/
 
 .form-section {
@@ -285,40 +294,47 @@ a.btn.btn-info:hover {
 button.btn.btn-default {
     font-family: 'Raleway', sans-serif;
     font-size: 20px;
-    background-color: #fafafa;
+    background-color: #e7c6c8;
     font-weight: 700;
     color: #314a52;
     margin: 0px 0px 20px 0px;
+    transition: .5s ease-in-out;
+}
+button.btn.btn-default:hover{
+    background-color: #f5dbda;
 }
 .social-section {
-    background-color:#fff0f0 ;
+    background-color: #fff0f0;
 
 }
+
 .work-heading {
     font-family: 'abril fatface', cursive;
-    margin :30px 0px 30px;
+    margin: 30px 0px 30px;
     font-size: 30px;
     color: #263859;
 }
 
 .social-heading {
     font-family: 'Raleway', sans-serif;
-    color: #314a52; 
+    color: #314a52;
     font-weight: 700;
     text-align: center;
     margin-top: 30px;
 }
+
 .fa {
     padding: 20px;
-    margin: 20px 40% 0px ;
+    margin: 20px 40% 0px;
 
-    
-    width: 50px;
+
+    width: 55px;
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
-    background-color: #e9ecef;
+    background-color: #e7c6c8;
     color: #314a52;
+    transition: .5s ease-in-out;
 
 }
 
@@ -331,5 +347,7 @@ a.fa {
 }
 
 .fa:hover {
-    color: black;
+    background-color: #f5dbda;
+    color: #314a52;
+    text-decoration: none;
 }
