--- a/css/style.css
+++ b/css/style.css
@@ -350,3 +350,17 @@ a.fa {
     color: #314a52;
     text-decoration: none;
 }
+
+.cv-link {
+    text-align: center;
+    padding: 10px 15px 15px;
+    margin-bottom: 20px;
+    
+    
+}
+
+.cv-text{
+    font-family: 'Raleway', sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+}
